package lab.SingletonFactory;

public abstract class Bar {
	public int id;
}
