package lab.SingletonFactory;

public class WonkaBar extends Bar {

	public WonkaBar(int identifier) {
			id = identifier;
	}	
}
