@startuml

title __SINGLETONFACTORY's Class Diagram__\n

  namespace lab.SingletonFactory {
    abstract class lab.SingletonFactory.Bar {
        + id : int
    }
  }
  

  namespace lab.SingletonFactory {
    class lab.SingletonFactory.BarProducer {
        + count : int
        + id : int
        + BarProducer()
        + run()
    }
  }
  

  namespace lab.SingletonFactory {
    interface lab.SingletonFactory.Factory {
        {abstract} + create()
    }
  }
  

  namespace lab.SingletonFactory {
    class lab.SingletonFactory.SingletonfactoryTest {
        {static} + main()
    }
  }
  

  namespace lab.SingletonFactory {
    class lab.SingletonFactory.WonkaBar {
        + WonkaBar()
    }
  }
  

  namespace lab.SingletonFactory {
    class lab.SingletonFactory.WonkaBarFactory {
        - counter : int
        {static} - uniqueInstance : WonkaBarFactory
        + create()
        {static} + getInstance()
        - WonkaBarFactory()
    }
  }
  

  lab.SingletonFactory.BarProducer o-- lab.SingletonFactory.Factory : wonka
  lab.SingletonFactory.WonkaBar -up-|> lab.SingletonFactory.Bar
  lab.SingletonFactory.WonkaBarFactory .up.|> lab.SingletonFactory.Factory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
